--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -28,7 +28,7 @@
 
 // Wizard container
 .wizard {
-  padding: $spacing-600 32px 120px; // more spacing at the bottom to be able to scroll through past the last content
+  padding: $spacing-600 0 120px; // more spacing at the bottom to be able to scroll through past the last content
   min-height: $wizard-body-height;
   height: 100%;
   background: linear-gradient(
