style(form): contextual help option

--- a/blocks/form/components/formhero/formhero.scss
+++ b/blocks/form/components/formhero/formhero.scss
@@ -37,6 +37,18 @@
   .panel-formhero__content {
     order: 0;
 
+    picture {
+      margin-bottom: $spacing-600;
+
+      @include media('tablet') {
+        margin-bottom: $spacing-700;
+      }
+
+      @include media('desktop') {
+        margin-bottom: 0;
+      }
+    }
+
     h2 {
       @include heading-level-1;
       margin-top: 0;
@@ -46,22 +58,14 @@
     p {
       @include font-body-large;
       margin-bottom: 12px;
-    }
-  }
 
-  .panel-formhero.field-intro1,
-  .panel-formhero.field-intro2,
-  .panel-formhero.field-intro3 {
-    .panel-formhero__content {
       p {
-        p {
-          font-size: $size-font-subtitle;
-          color: $text-dark;
-          margin-bottom: $spacing-200;
+        font-size: $size-font-subtitle;
+        color: $text-dark;
+        margin-bottom: $spacing-200;
 
-          @include media('desktop') {
-            margin-bottom: $spacing-300;
-          }
+        @include media('desktop') {
+          margin-bottom: $spacing-300;
         }
       }
     }
