--- a/styles/forms/_checkbox.scss
+++ b/styles/forms/_checkbox.scss
@@ -34,7 +34,7 @@
     }
 
     .desc {
-      font-size: clamp(0.9375rem, 1.25vw, 1.0625rem);
+      font-size: clamp(15px, 1.25vw, 17px);
       color: $text-secondary;
     }
 
@@ -73,95 +73,100 @@
   }
 }
 
-.checkbox-group-wrapper.horizontal {
-  .checkbox-wrapper {
-    flex-direction: column;
-    align-items: flex-start;
-
-    &:not(:last-child) {
-      margin-bottom: 8px;
+.checkbox-group-wrapper {
+  &.horizontal {
+    > legend {
+      padding-left: 0;
+      padding-right: 0;
     }
 
-    @media (min-width: 744px) {
-      flex-direction: row;
-      align-items: center;
-    }
+    .checkbox-wrapper {
+      flex-direction: column;
+      align-items: flex-start;
 
-    label {
-      width: 100%;
+      &:not(:last-child) {
+        margin-bottom: 8px;
+      }
 
-      @media (max-width: 743px) {
-        padding-right: 48px;
+      @media (min-width: 744px) {
+        flex-direction: row;
+        align-items: center;
+      }
 
-        &::before {
-          right: 12px;
-          bottom: 16px;
-          top: auto;
-          transform: translateY(0);
+      label {
+        width: 100%;
+
+        @media (max-width: 743px) {
+          padding-right: 48px;
+
+          &::before {
+            right: 12px;
+            bottom: 16px;
+            top: auto;
+            transform: translateY(0);
+          }
         }
       }
     }
   }
-}
 
-/**********************************
-  Horizontal Variant Pills Group
-**********************************/
+  &.variant-pills {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.75rem;
 
-.checkbox-group-wrapper.variant-pills {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.75rem;
-
-  .checkbox-wrapper {
-    input[type='checkbox'] {
-      display: none; // Hide native checkbox
-    }
-
-    label {
-      display: flex;
-      padding: var(--Spacing-Spacing-200, 8px) var(--Spacing-Spacing-300, 12px)
-        var(--Spacing-Spacing-200, 8px) var(--Spacing-Spacing-450, 20px);
-      align-items: center;
-      gap: var(--Spacing-Spacing-000, 0px);
-      background-color: $color-white;
-      border-radius: $border-radius-round;
-      font-size: clamp(15px, 1.25vw, 17px); // from $size-font-body-default
-      line-height: 160%;
-      color: $text-secondary;
-      border: 1px solid $stroke-tertiary;
-      cursor: pointer;
-      transition: background-color 0.2s ease, color 0.2s ease, border 0.2s ease;
-
-      &::after {
-        content: '';
-        display: block;
-        background-image: url('../../icons/icon-plus.svg');
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
-        width: 16px;
-        height: 16px;
-        margin-left: 8px;
+    .checkbox-wrapper {
+      input[type='checkbox'] {
+        display: none; // Hide native checkbox
       }
 
-      &::before {
-        display: none;
+      label {
+        display: flex;
+        padding: var(--Spacing-Spacing-200, 8px)
+          var(--Spacing-Spacing-300, 12px) var(--Spacing-Spacing-200, 8px)
+          var(--Spacing-Spacing-450, 20px);
+        align-items: center;
+        gap: var(--Spacing-Spacing-000, 0px);
+        background-color: $color-white;
+        border-radius: $border-radius-round;
+        font-size: clamp(15px, 1.25vw, 17px); // from $size-font-body-default
+        line-height: 160%;
+        color: $text-secondary;
+        border: 1px solid $stroke-tertiary;
+        cursor: pointer;
+        transition: background-color 0.2s ease, color 0.2s ease,
+          border 0.2s ease;
+
+        &::after {
+          content: '';
+          display: block;
+          background-image: url('../../icons/icon-plus.svg');
+          background-position: center;
+          background-size: contain;
+          background-repeat: no-repeat;
+          width: 16px;
+          height: 16px;
+          margin-left: 8px;
+        }
+
+        &::before {
+          display: none;
+        }
       }
-    }
 
-    input[type='checkbox']:checked + label {
-      background-color: $bg-dark;
-      color: $color-white;
-      border: 1px solid $stroke-dark;
+      input[type='checkbox']:checked + label {
+        background-color: $bg-dark;
+        color: $color-white;
+        border: 1px solid $stroke-dark;
 
-      &::after {
-        background-image: url('../../icons/icon-x.svg');
-      }
+        &::after {
+          background-image: url('../../icons/icon-x.svg');
+        }
 
-      &:hover {
-        background-color: $color-accent;
-        border-color: $color-accent;
+        &:hover {
+          background-color: $color-accent;
+          border-color: $color-accent;
+        }
       }
     }
   }
