--- a/styles/forms/_labels.scss
+++ b/styles/forms/_labels.scss
@@ -1,19 +1,14 @@
-@use '../settings/colors' as *;
-@use '../settings/fonts' as *;
-@use '../settings/spacings' as *;
+@use '../settings' as *;
 
 // Base label styling including fieldsets and legends used as labels
-.form label:not(.radio-group--with-icon__label),
+.form label:not(.radio-group--with-icon__label, .field-label--with-description),
 .form legend.field-label,
 .form fieldset.checkbox-group-wrapper legend,
 .form fieldset.radio-group-wrapper legend {
-  font-family: $font-family;
   font-size: $size-font-label;
   color: $text-primary;
-  font-style: normal;
-  font-weight: $font-weight-medium;
+  font-weight: 500;
   line-height: 133%;
-  letter-spacing: $letter-spacing-default;
   margin-bottom: 0;
   margin-top: $spacing-300;
 }
