--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -18,28 +18,28 @@ $font-weight-bold: 700;
 $letter-spacing-default: 0px;
 
 /* Headings */
-$size-font-h1: clamp(40px, 5.5vw, 60px);   // 40 → 48 → 60
-$size-font-h2: clamp(36px, 5vw, 48px);     // 36 → 40 → 48
-$size-font-h3: clamp(32px, 4.5vw, 40px);   // 32 → 36 → 40
-$size-font-h4: clamp(24px, 3.5vw, 32px);   // 24 → 28 → 32
-$size-font-h5: clamp(20px, 2.75vw, 24px);  // 20 → 22 → 24
-$size-font-h6: clamp(18px, 2.25vw, 20px);  // 18 → 19 → 20
+$size-font-h1: clamp(40px, 5.5vw, 60px);
+$size-font-h2: clamp(36px, 5vw, 48px);
+$size-font-h3: clamp(32px, 4.5vw, 40px);
+$size-font-h4: clamp(24px, 3.5vw, 32px);
+$size-font-h5: clamp(20px, 2.75vw, 24px);
+$size-font-h6: clamp(18px, 2.25vw, 20px);
 
 // Subtitle
-$size-font-subtitle: clamp(24px, 4vw, 32px); // 24 → 28 → 32
+$size-font-subtitle: clamp(24px, 4vw, 32px);
 
 // Strap Titles
-$size-font-strap-title: clamp(20px, 2.8vw, 24px);      // 20 → 22 → 24
-$size-font-strap-title-small: clamp(14px, 2.2vw, 16px); // 14 → 15 → 16
+$size-font-strap-title: clamp(20px, 2.8vw, 24px);
+$size-font-strap-title-small: clamp(14px, 2.2vw, 16px);
 
 // Body Text
-$size-font-body-large:   clamp(17px, 1.5vw, 20px); // 17 → 18 → 20
-$size-font-body-default: clamp(15px, 1.25vw, 17px); // 15 → 16 → 17
-$size-font-body-small:   clamp(12px, 1.1vw, 14px); // 12 → 13 → 14
+$size-font-body-large: clamp(17px, 1.5vw, 20px);
+$size-font-body-default: clamp(15px, 1.25vw, 17px);
+$size-font-body-small: clamp(12px, 1.1vw, 14px);
 
 // Labels
-$size-font-label-title: clamp(17px, 1.5vw, 20px); // 17 → 18 → 20
-$size-font-label-subtitle: clamp(15px, 1.25vw, 17px); // 15 → 16 → 17
+$size-font-label-title: clamp(17px, 1.5vw, 20px);
+$size-font-label-subtitle: clamp(15px, 1.25vw, 17px);
 
 // Mixins
 @mixin heading-level-1 {
@@ -107,13 +107,9 @@ $size-font-label-subtitle: clamp(15px, 1.25vw, 17px); // 15 → 16 → 17
 
 // Form Inputs and Buttons
 $size-font-button-default: clamp(18px, 1.25vw, 20px);
-$size-font-button-small: clamp(16px, 1.1vw, 18px); // need to check RW
-$size-font-error-link: clamp(15px, 1.1vw, 18px); // same as base font size
-$size-font-error-message: clamp(12px, 1vw, 14px); // small paragraph size
-$size-font-hint: clamp(15px, 1.1vw, 18px); // same as base font size
+$size-font-button-small: clamp(16px, 1.1vw, 18px);
+$size-font-error-link: clamp(15px, 1.1vw, 18px);
+$size-font-error-message: clamp(12px, 1vw, 14px);
+$size-font-hint: clamp(15px, 1.1vw, 18px);
 $size-font-input-text: clamp(18px, 1.25vw, 20px);
 $size-font-label: clamp(18px, 1.25vw, 20px);
-
-
-
-
