--- a/blocks/form/components/wizard/_wizard-theme.scss
+++ b/blocks/form/components/wizard/_wizard-theme.scss
@@ -9,6 +9,72 @@
       $color-accent 25%,
       $color-primary-navy 100%
     );
+    color: $color-white;
+
+    .text-wrapper,
+    .number-wrapper,
+    .email-wrapper,
+    .radio-wrapper {
+      label,
+      .field-label {
+        color: $color-white;
+      }
+
+      input,
+      textarea {
+        color: $color-white;
+
+        &::placeholder {
+          color: rgba($color-white, 0.75);
+        }
+      }
+    }
+
+    h1,
+    h2,
+    h3 {
+      color: $color-white;
+      background: none;
+      background-clip: unset;
+      -webkit-background-clip: unset;
+      -webkit-text-fill-color: $color-white;
+      font-family: $font-family;
+      margin-bottom: $spacing-600;
+
+      &:last-child:not(:first-child) {
+        margin-bottom: 0;
+      }
+    }
+
+    h4,
+    h5,
+    h6 {
+      color: $color-white;
+      font-family: $font-family;
+      margin-bottom: $spacing-100;
+
+      &:last-child:not(:first-child) {
+        margin-bottom: 0;
+      }
+    }
+
+    p,
+    .subtitle {
+      color: $color-white;
+    }
+
+    .subtitle {
+      font-style: normal;
+      font-weight: lighter;
+      line-height: 130%;
+      margin: 0;
+
+      p {
+        margin: 0;
+
+        font-size: $size-font-subtitle;
+      }
+    }
   }
 
   &.wizard--bg-mid {
@@ -73,6 +139,62 @@
         background-position: left bottom;
         transform: rotate(180deg);
       }
+    }
+
+    .p-large p {
+      font-size: $size-font-body-large;
+      color: $text-dark-primary;
+      font-weight: normal;
+      font-style: normal;
+      line-height: 130%;
+      margin: 0;
+
+      p {
+        margin: 0;
+        color: $text-primary;
+        font-size: $size-font-body-large;
+      }
+    }
+  }
+
+  &.wizard--bg-light,
+  &.wizard--bg-mid {
+    color: $text-primary;
+
+    h1,
+    h2,
+    h3 {
+      color: $text-primary;
+      font-family: $font-family;
+      margin-bottom: $spacing-600;
+      background: $color-gradient-blue;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+
+      &:last-child:not(:first-child) {
+        margin-bottom: 0;
+      }
+    }
+
+    h4,
+    h5,
+    h6 {
+      color: $color-primary-navy;
+      font-family: $font-family;
+      margin-bottom: 0;
+
+      &:last-child:not(:first-child) {
+        margin-bottom: 0;
+      }
+    }
+
+    p,
+    .subtitle,
+    .straptitle {
+      color: $text-secondary;
+      font-family: $font-family;
+      line-height: 1.6;
     }
   }
 }
