--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,18 @@
-:root {
+/* :root {
   --font-family: 'Atkinson Hyperlegible Next', sans-serif;
   --font-weight-light: 300;
   --font-weight-regular: 400;
   --font-weight-medium: 500;
   --font-weight-bold: 700;
   --base-font-size: 1rem;
-  /* Headings */
+
   --h1-size: clamp(3rem, 5.2vw, 3.8125rem);
   --h2-size: clamp(2.375rem, 4vw, 3rem);
   --h3-size: clamp(2rem, 3.5vw, 2.5rem);
   --h4-size: clamp(1.5rem, 2.5vw, 2rem);
   --h5-size: clamp(1.375rem, 2vw, 1.5rem);
   --h6-size: 1.25rem;
-  /* Text */
+
   --subtitle-size: 1.75rem;
   --strap-title-size: 1.25rem;
   --paragraph-large: clamp(1.125rem, 1.5vw, 1.25rem);
@@ -22,7 +22,7 @@
   --line-height-text: 1.5;
   --letter-spacing: 0;
   --text-color: var(--text-primary);
-}
+} */
 
 /* fallback fonts */
 /* @font-face {
@@ -35,13 +35,13 @@
   size-adjust: 99.529%;
   src: local('Arial');
 } */
-@media (width >= 900px) {
+/* @media (width >= 900px) {
   :root {
-    /* body sizes */
+
     --body-font-size-m: 1.125rem;
     --body-font-size-s: 1rem;
     --body-font-size-xs: 0.875rem;
-    /* heading sizes */
+
     --heading-font-size-xxl: 2.8125rem;
     --heading-font-size-xl: 2.25rem;
     --heading-font-size-l: 1.75rem;
@@ -49,7 +49,7 @@
     --heading-font-size-s: 1.25rem;
     --heading-font-size-xs: 1.125rem;
   }
-}
+} */
 body {
   display: none;
 }
@@ -57,10 +57,10 @@ body {
 body.appear {
   display: block;
 }
-
+/*
 header {
   height: var(--nav-height);
-}
+} */
 
 header .header,
 footer .footer {
